Publishing to gh-pages (publish.sh)

--- a/client/index.html
+++ b/client/index.html
@@ -172,23 +172,6 @@
     <section class="cf ph2 ph5-l pv3 pv4-l f4 tj-l center measure-wide lh-copy black"><table>
 <thead>
 <tr>
-<th></th>
-<th></th>
-<th></th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td><a href="https://www.bilibili.com/video/BV1nK4y1f7Yh/"><img src="/images/video_cover/mc_1.jpg" alt="启动器安装与服务器登录"></a></td>
-<td><a href="https://www.bilibili.com/video/BV1sz4y1k7Hm/"><img src="/images/video_cover/mc_2.jpg" alt="客户端开启光影效果"></a></td>
-<td><a href="https://www.bilibili.com/video/BV18A411x7EH"><img src="/images/video_cover/mc_3.jpg" alt="命令、材质包导入及更换皮肤"></a></td>
-</tr>
-</tbody>
-</table>
-<p><!-- raw HTML omitted --><!-- raw HTML omitted --></p>
-<table>
-<thead>
-<tr>
 <th style="text-align:center">游戏版本</th>
 <th style="text-align:center">JAVA版本</th>
 </tr>
@@ -213,8 +196,27 @@
 </tbody>
 </table>
 <hr>
-<h2 id="启动器">启动器</h2>
-<h3 id="orzmc-downloadorzmc-macos"><strong><a href="https://github.com/OrzGeeker/OrzSwiftMC/releases/download/0.0.7/OrzMC_0.0.7_15_20240922_121746.zip">OrzMC Download</a></strong></h3>
+<h2 id="orzmc-for-macos">OrzMC for MacOS</h2>
+<h2 id="视频介绍">视频介绍</h2>
+<table>
+<thead>
+<tr>
+<th style="text-align:center"></th>
+<th style="text-align:center"></th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td style="text-align:center"><a href="https://www.bilibili.com/video/BV1b4HAeBERS"><img src="/images/video_cover/orzmc_install.png" alt="安装"></a></td>
+<td style="text-align:center"><a href="https://www.bilibili.com/video/BV1hBtUeJE8y"><img src="/images/video_cover/orzmc_usage.png" alt="使用"></a></td>
+</tr>
+<tr>
+<td style="text-align:center">安装</td>
+<td style="text-align:center">使用</td>
+</tr>
+</tbody>
+</table>
+<h3 id="downloadorzmc-macos"><strong><a href="https://github.com/OrzGeeker/OrzSwiftMC/releases/download/0.0.7/OrzMC_0.0.7_15_20240922_121746.zip">Download</a></strong></h3>
 <p>使用Swift&amp;SwiftUI编写的MacOS平台启动器</p>
 <p><img src="/images/client/orzmc_macOS.png" alt="OrzMC_MacOS"></p>
 <hr>
