Publishing to gh-pages (publish.sh)

--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
 当 <strong>白名单玩家</strong> 加入服务器时，如果服务器未运行，会触发 <strong>自动启动</strong></p>
 <p>📌 <strong>测试服</strong>：免费服务器，需要管理员手动启动。
 测试服上最后一个玩家 <strong>离开5分钟</strong> 后会自动停止服务。
-测试服主要用来测试新版本升级及插件开发使用</p>
+测试服主要用来测试新版本升级及插件开发使用，测试服长期不使用会被平台回收。</p>
 <hr>
 <p>加入玩家群(QQ群号: <strong><a href="https://jq.qq.com/?_wv=1027&amp;k=DUEQuLE6">1056934080</a></strong>)
 也可以直接扫码网站背景图上的二维码。</p>
