--- a/sponsor/index.html
+++ b/sponsor/index.html
@@ -46,18 +46,18 @@
   <meta property="og:site_name" content="Joker@Minecraft 🇨🇳">
   <meta property="og:title" content="捐赠">
   <meta property="og:description" content="支付宝扫上面背景图上的二维码，并添加备注信息
-捐赠者列表公示 名称 金额 兑换积分 ✅ joker ¥23.85 300">
+捐赠者列表公示 兑换状态 捐赠人名称 捐赠金额 兑换积分 兑换金额 结余 ✅ joker ¥23.85 300 23.85 ¥0 ✅ **瑞 ¥31.80 350 ¥30.13 ¥1.67">
   <meta property="og:locale" content="zh">
   <meta property="og:type" content="website">
 
   <meta itemprop="name" content="捐赠">
   <meta itemprop="description" content="支付宝扫上面背景图上的二维码，并添加备注信息
-捐赠者列表公示 名称 金额 兑换积分 ✅ joker ¥23.85 300">
-  <meta itemprop="wordCount" content="9">
+捐赠者列表公示 兑换状态 捐赠人名称 捐赠金额 兑换积分 兑换金额 结余 ✅ joker ¥23.85 300 23.85 ¥0 ✅ **瑞 ¥31.80 350 ¥30.13 ¥1.67">
+  <meta itemprop="wordCount" content="20">
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="捐赠">
   <meta name="twitter:description" content="支付宝扫上面背景图上的二维码，并添加备注信息
-捐赠者列表公示 名称 金额 兑换积分 ✅ joker ¥23.85 300">
+捐赠者列表公示 兑换状态 捐赠人名称 捐赠金额 兑换积分 兑换金额 结余 ✅ joker ¥23.85 300 23.85 ¥0 ✅ **瑞 ¥31.80 350 ¥30.13 ¥1.67">
 
       
     
@@ -135,18 +135,30 @@
 <table>
   <thead>
       <tr>
-          <th></th>
-          <th style="text-align: left">名称</th>
-          <th style="text-align: left">金额</th>
+          <th style="text-align: left">兑换状态</th>
+          <th style="text-align: left">捐赠人名称</th>
+          <th style="text-align: left">捐赠金额</th>
           <th style="text-align: left">兑换积分</th>
+          <th style="text-align: left">兑换金额</th>
+          <th style="text-align: left">结余</th>
       </tr>
   </thead>
   <tbody>
       <tr>
-          <td>✅</td>
+          <td style="text-align: left">✅</td>
           <td style="text-align: left">joker</td>
           <td style="text-align: left">¥23.85</td>
           <td style="text-align: left">300</td>
+          <td style="text-align: left">23.85</td>
+          <td style="text-align: left">¥0</td>
+      </tr>
+      <tr>
+          <td style="text-align: left">✅</td>
+          <td style="text-align: left">**瑞</td>
+          <td style="text-align: left">¥31.80</td>
+          <td style="text-align: left">350</td>
+          <td style="text-align: left">¥30.13</td>
+          <td style="text-align: left">¥1.67</td>
       </tr>
   </tbody>
 </table>
