Publishing to gh-pages (publish.sh)

--- a/user/index.html
+++ b/user/index.html
@@ -156,7 +156,7 @@
     <section class="cf ph3 ph5-l pv3 pv4-l f4 tc-l center measure-wide lh-copy nested-links black"><h1 id="新手进服">新手进服</h1>
 <h2 id="玩家须知">玩家须知</h2>
 <p>服务器中一些热爱创造的小伙伴在这里花费了大量心力建造出了各种漂亮的建筑，希望刚加入的朋友不要随意对其进行破坏，尊重他人的劳动成果。
-如果是完全小白，进服后如果感觉没有玩伴或者不太熟悉环境，可以加入玩家QQ群:<strong><a href="https://jq.qq.com/?_wv=1027&amp;k=DUEQuLE6">1056934080</a></strong>，
+如果是完全小白，进服后如果感觉没有玩伴或者不太熟悉环境，可以加入玩家QQ群:<strong><a href="https://qm.qq.com/q/FDVpptfKoY">1056934080</a></strong>，
 群里有很多资深的朋友可以带你一起游玩。</p>
 <h3 id="设置帐号密码">设置帐号密码</h3>
 <p>刚登录服务器后，使用 <strong>/register</strong> 命令注册自己用户名对应的登录密码，以防止其它人使用你的帐号，盗用你的物品</p>
